fix(ci): simplify coverage reporting workflow
Combine test and coverage report generation into a single step to
improve reliability and remove Codecov integration.

--- a/.github/workflows/secrets-tests.yml
+++ b/.github/workflows/secrets-tests.yml
@@ -31,10 +31,25 @@ jobs:
           cd secrets
           go test -v -race -coverprofile=coverage.out ./...
           go tool cover -func=coverage.out
+          go tool cover -html=coverage.out -o coverage.html
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
         with:
-          directory: ./secrets
-          flags: secrets
-          fail_ci_if_error: true 
+          name: coverage-report
+          path: secrets/coverage.html
+          retention-days: 14
+
+      - name: Comment PR with coverage
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const coverage = require('fs').readFileSync('secrets/coverage.out', 'utf8');
+            const totalCoverage = coverage.match(/total:\s+\(statements\)\s+(\d+\.\d+)%/)[1];
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `## Test Coverage\n\nTotal coverage: ${totalCoverage}%\n\nView the full coverage report in the workflow artifacts.`
+            }); 
